--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,10 @@ test_fast:
 
 test_devel:
   stage: test
+  artifacts:
+    paths:
+        - Testing/
+    when: on_failure
   script:
     - cmake -G "Ninja" -DDEVEL=true ..
     - ninja
