--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,6 +60,9 @@ deploy_library:
   stage: deploy
   script:
   - ninja
+  environment:
+    name: production
+    url: https://framagit.org/jeser/Data-Pipeline/builds/artifacts/master/file/build/libdatapipeline.so?job=deploy_library
   artifacts:
     paths:
     - build/libdatapipeline.so
